# commoncrawl

./: .gitignore  README.md  build.properties  build.xml
conf/: effective_tld_list.txt  log4j.properties
lib/native/Linux-amd64-64/: libGoogleURL_jni.la  libGoogleURL_jni.so.1.0.0  libicui18n.so.38  libicuio.so.38.1  libicutu.so.38  libicutu.so.38.1  libicuuc.so.38  libicuuc.so.38.1
lib/native/Linux-i386-32/: libGoogleURL_jni.la  libGoogleURL_jni.so.1.0.0  libicudata.so.38  libicuio.so.38  libicuio.so.38.1  libicutu.so.38.1  libicuuc.so.38.1
native/src/libGoogleURL/googleurl/base/: logging.cc
native/src/libGoogleURL/googleurl/src/: url_canon_etc.cc  url_canon_fileurl.cc  url_canon_internal.cc  url_canon_internal.h  url_canon_internal_file.h  url_canon_query.cc  url_canon_relative.cc  url_canon_stdstring.h  url_canon_unittest.cc  url_parse_internal.h  url_parse_unittest.cc  url_test_utils.h
org/commoncrawl/hadoop/io/: ARCSplitCalculator.java
org/commoncrawl/hadoop/mergeutils/: KeyValuePairComparator.java  MergeSortSpillWriter.java  OptimizedKeyGeneratorAndComparator.java  RawDataSpillWriter.java  SequenceFileMerger.java  SequenceFileSpillWriter.java  SpillValueCombiner.java
org/commoncrawl/io/internal/: NIODNSLocalResolver.java  NIODNSSimpleResolverImpl.java  NIOSocketListener.java
org/commoncrawl/query/: QueryCompletionCallback.java  QueryControllerHost.java  QueryRequest.java  QueryResultFileIndex.java  QuerySlaveConnection.java  QuerySlaveServer.java  query.jr
org/commoncrawl/rpc/: Channel.java  RPCProtocol.java
org/commoncrawl/rpc/compiler/: JEnum.java  JFloat.java  JLong.java  JRecord.java  JavaGenerator.java
org/commoncrawl/rpc/thriftrpc/: ThriftRPCChannel.java  ThriftRPCClientChannel.java  thriftRPCTest.thrift
org/commoncrawl/server/: CommonCrawlServer.java
org/commoncrawl/util/shared/: ArcFileItemUtils.java  ArcFileReader.java  BinaryComparableWithOffset.java  BloomFilter.java  ByteBufferInputStream.java  ByteBufferOutputStream.java  ByteStream.java  FSByteBufferInputStream.java  Filter.java  GoogleURL.java  ImmutableBuffer.java  SuffixStringMatcher.java  TFileUtils.java  TextBytes.java
src/native/: Makefile.am  config.h.in  configure  configure.ac
src/native/src/libGoogleURL/: GoogleURLJNI.cc  Makefile.am
src/native/src/libGoogleURL/googleurl/: README.google  README.txt
src/native/src/libGoogleURL/googleurl/base/: basictypes.h  logging.h  scoped_ptr.h
src/native/src/libGoogleURL/googleurl/src/: gurl.cc  gurl.h  gurl_unittest.cc  url_canon.h  url_canon_host.cc  url_canon_icu.cc  url_canon_icu.h  url_canon_ip.cc  url_canon_path.cc  url_canon_pathurl.cc  url_canon_stdurl.cc  url_file.h  url_parse.cc  url_parse.h  url_parse_file.cc  url_util.cc  url_util.h
src/native/src/libGoogleURL/icu38.1/: README.txt
src/native/src/libGoogleURL/icu38.1/includes/: platform.h
src/org/commoncrawl/async/: ConcurrentTask.java  EventLoop.java  TimerRegistry.java
src/org/commoncrawl/query/: Query.java  QueryResult.java  RemoteQueryCompletionCallback.java
src/org/commoncrawl/rpc/: ActorInterface.java  BinaryProtocol.java  EmptyStruct.java  InProcessActor.java  IncomingMessageContext.java  MessageData.java  OutgoingMessageContext.java  RPCActorService.java  RPCChannel.java  RPCException.java  RPCFrame.java  RPCMessageDispatcher.java  RPCServerChannel.java  RPCStruct.java  RPCStructWithId.java  RPCTestServer.java  rpcTest.jr
src/org/commoncrawl/samples/: BasicArcFileReaderSample.java
src/org/commoncrawl/server/: AsyncWebServerRequest.java  CommonCrawlServer.java  WebServer.java
src/org/commoncrawl/thriftrpc/: ThriftAsyncClientChannel.java  ThriftAsyncRemoteCallContext.java  ThriftAsyncRemoteClientChannel.java  ThriftAsyncRequest.java  ThriftAsyncRequestProcessor.java  ThriftAsyncServerChannel.java  thriftRPCTest.thrift
(+252 files in other folders)
